add menu collaps

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -20,29 +20,83 @@
   color: #30a6e6;
 }
 
-.nav-menu{
+.nav-link:after {
+  display: block;
+  content: "";
+  border-bottom: solid 3px black;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+
+.nav-link:hover:after {
+  transform: scaleX(1);
+}
+
+.nav-link.fromRight:after {
+  transform-origin: 100% 50%;
+}
+
+.nav-link.fromLeft:after {
+  transform-origin: 0% 50%;
+}
+
+.nav-menu {
   display: none;
 }
 
+.menu__collaps {
+  background-color: #272361fd;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  display: none;
+}
+
+.menu__collaps__items {
+  color: white;
+  margin-top: 200px;
+  font-size: 30px;
+}
+
+.menu__collaps__items li {
+  padding-bottom: 20px;
+  list-style-type: none;
+}
+
+.close__icon {
+  margin-top: 100px;
+  height: 50px;
+  width: 50px;
+  color: white;
+
+  font-size: 50px;
+  float: right;
+}
+
+.menu__collaps__items a {
+  color: #fff;
+}
 /**
  RESPOSIVE
 **/
 
 @media screen and (max-width: 750px) {
   /* Rédigez vos propriétés CSS ici */
-  .navbar-expand{
+  .navbar-expand {
     display: none;
   }
 
-  
-}
+  .menu__collaps {
+    display: none;
+    height: 100vh;
+  }
 
-@media screen and (max-width:  750px) {
-  /* Rédigez vos propriétés CSS ici */
-  .nav-menu{
+  .nav-menu {
     display: block;
     display: flex;
   }
+
+  body {
+    overflow: hidden;
+  }
 }
-
-
