--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -1,8 +1,9 @@
 .banner-div {
     background-image: url("../../../src/images/bg-banner.jpg");
-    background-position: center;
+    background-position: center center;
     background-size: contain;
     padding: 30px;
+    animation: shrink 8s infinite alternate;
 }
 
 .slider-content {
@@ -46,17 +47,14 @@ h1 {
 }
 
 .dot-div span {
-    height: 20px;
     border-radius: 20px;
     padding: 8px 70px 8px 2px;
     border: none;
     display: inline-flex;
     float: left;
-    margin-top: 10px;
 }
 
 .owl-carousel .active span {
-    height: 20px;
     width: 100%;
     background-color: #46c8df5d !important;
     display: block;
@@ -68,7 +66,7 @@ h1 {
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     border-radius: 30px;
-    margin-top: -2px;
+    margin-top: 0px;
 }
 
 .btn {
@@ -108,6 +106,71 @@ h1 {
     box-shadow: 1px 0px 1px 3px rgba(255, 255, 255, 0.418);
 }
 
+.banner-image {
+    -webkit-animation: shake 10s ease-in-out;
+    animation: shake 10s ease-in-out infinite;
+}
+
+@keyframes shrink {
+    0% {
+        background-size: 110% 110%;
+    }
+    100% {
+        background-size: 100% 100%;
+    }
+}
+
+@-webkit-keyframes shake {
+    0% {
+        -webkit-transform: translateX(0);
+    }
+
+    20% {
+        -webkit-transform: translateX(-10px);
+    }
+
+    40% {
+        -webkit-transform: translateX(10px);
+    }
+
+    60% {
+        -webkit-transform: translateX(-10px);
+    }
+
+    80% {
+        -webkit-transform: translateX(10px);
+    }
+
+    100% {
+        -webkit-transform: translateX(0);
+    }
+}
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-10px);
+    }
+
+    40% {
+        transform: translateX(10px);
+    }
+
+    60% {
+        transform: translateX(-10px);
+    }
+
+    80% {
+        transform: translateX(10px);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 @media screen and (max-width: 750px) {
     /* Rédigez vos propriétés CSS ici */
     .banner-div {
@@ -136,6 +199,6 @@ h1 {
         border-radius: 100px;
         width: 100%;
         padding: 10px 40px 10px 40px;
-        box-shadow: 3px 5px rgba(255, 255, 255, 0.877);
+        box-shadow: 1px 0px 1px 3px rgba(255, 255, 255, 0.418);
     }
 }
