--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -33,11 +33,13 @@ p {
     background-color: #fff;
     border-radius: 5px;
     margin-bottom: 10px;
+    border-radius: 20px;
+    /* box-shadow: 0 1px 3px rgba(6, 231, 81, 0.041), 0 2px 8px rgba(224, 222, 222, 0.76); */
 }
 
 .app-card img {
     width: 100%;
-    border-radius: 5px 5px 20px 20px;
+    border-radius: 10px;
 }
 .app-card h1 {
     font-size: 20px;
@@ -52,7 +54,6 @@ p {
 
 .app-card-content {
     padding: 8px;
-    box-shadow: 0 1px 3px rgba(6, 231, 81, 0.041), 0 2px 8px rgba(224, 222, 222, 0.76);
 }
 
 .expertise-title {
@@ -70,4 +71,21 @@ p {
 
 .title{
     font-size: 40px;
+}
+
+
+.bg-col{
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(6, 231, 81, 0.041), 0 2px 8px rgba(224, 222, 222, 0.76);
+    padding: 8px 55px 8px 55px;
+    border-radius: 0px 20px 20px 0px;
+    width: max-content;
+    margin-right: 100px;
+    cursor: pointer;
+    width: 90%;
+}
+
+.bg-col p{
+    color: #28A3E6;
+
 }
